--- a/chorus_extractor-utku.ipynb
+++ b/chorus_extractor-utku.ipynb
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "religious-studio",
+   "id": "opening-lesbian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +184,9 @@
     "\n",
     "chorus_beat_positions = get_aligned_chorus_beats(bar_idx, N_bars, beat_positions)\n",
     "\n",
+    "# find bar beginnings for plotting\n",
+    "bar_times = [val for idx,val in enumerate(chorus_beat_positions) if not idx%4] \n",
+    "\n",
     "# convert time boundaries to indices and align the chorus\n",
     "chorus_aligned = track[int(chorus_beat_positions[0]*fs):int(chorus_beat_positions[-1]*fs)]"
    ]
@@ -218,13 +221,13 @@
     "fig, ax = plt.subplots(figsize=(20,10), nrows=2, sharex=False)\n",
     "\n",
     "img = librosa.display.specshow(dB_spectrogram, sr=fs, hop_length=hop_length, x_axis='time', y_axis='log', ax=ax[0])\n",
-    "ax[0].vlines(chorus_beats_time-chorus_beats_time[0], 0, 8192, alpha=0.8, color='w',linestyle='-')\n",
+    "ax[0].vlines(chorus_beat_positions-chorus_beat_positions[0], 0, 8192, alpha=0.8, color='w',linestyle='-')\n",
     "ax[0].vlines(bar_times-bar_times[0], 0, 16384, alpha=0.8, color='g',linestyle='-')\n",
     "ax[0].set_xlim([-0.2, chorus_length+0.2])\n",
     "ax[0].xaxis.set_ticks(np.arange(0, chorus_length+0.2, 1))\n",
     "\n",
     "librosa.display.waveplot(chorus_aligned, sr=fs, ax=ax[1])\n",
-    "ax[1].vlines(chorus_beats_time-chorus_beats_time[0], -0.9, 0.9, alpha=0.8, color='r',linestyle='-')\n",
+    "ax[1].vlines(chorus_beat_positions-chorus_beat_positions[0], -0.9, 0.9, alpha=0.8, color='r',linestyle='-')\n",
     "ax[1].vlines(bar_times-bar_times[0], -1.1, 1.1, alpha=0.8, color='g',linestyle='-')\n",
     "ax[1].set_xlim([-0.2, chorus_length+0.2])\n",
     "ax[1].xaxis.set_ticks(np.arange(0, chorus_length+0.2, 1))\n",
