--- a/generator/PyTorch/Starter_PyTorch.ipynb
+++ b/generator/PyTorch/Starter_PyTorch.ipynb
@@ -161,30 +161,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "VanillaAutoEncoder(\n",
-      "  (encoder): StackedBidirLSTMEncoder(\n",
-      "    (embedding): Embedding(38, 16)\n",
-      "    (net): LSTMnetwork(\n",
-      "      (lstm): LSTM(16, 128, num_layers=4, batch_first=True, dropout=0.2, bidirectional=True)\n",
-      "    )\n",
-      "  )\n",
-      "  (decoder): StackedUnidirLSTMDenseDecoder(\n",
-      "    (rnn): StackedUnidirLSTMDecoder(\n",
-      "      (rnn): LSTMnetwork(\n",
-      "        (lstm): LSTM(128, 128, num_layers=4, batch_first=True)\n",
-      "      )\n",
-      "    )\n",
-      "    (dense): Linear(in_features=128, out_features=38, bias=True)\n",
-      "  )\n",
-      ")\n",
-      "Number of parameters: 1869190\n"
+      "[autoreload of models failed: Traceback (most recent call last):\n",
+      "  File \"/kuacc/apps/anaconda/3.6/envs/root_env/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/kuacc/apps/anaconda/3.6/envs/root_env/lib/python3.7/site-packages/IPython/extensions/autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/kuacc/apps/anaconda/3.6/envs/root_env/lib/python3.7/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/kuacc/apps/anaconda/3.6/envs/root_env/lib/python3.7/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 630, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 724, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 860, in get_code\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 791, in source_to_code\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/models.py\", line 63\n",
+      "    def forward\n",
+      "              ^\n",
+      "SyntaxError: invalid syntax\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'output_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-d8afe40e5280>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencoders\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStackedBidirLSTMEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mencoder_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdecoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdecoders\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStackedUnidirLSTMDecoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mdecoder_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#decoder = decoders.StackedUnidirLSTMDenseDecoder(**decoder_params).to(device)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'output_size'"
      ]
     }
    ],
