--- a/generator/PyTorch/Starter_PyTorch-Copy1.ipynb
+++ b/generator/PyTorch/Starter_PyTorch-Copy1.ipynb
@@ -124,19 +124,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([27, 12])\n",
       "Seq2Seq(\n",
       "  (encoder): Encoder(\n",
       "    (embedding): Embedding(27, 12)\n",
-      "    (rnn): LSTM(12, 64, num_layers=4, batch_first=True)\n",
+      "    (rnn): LSTM(12, 64, batch_first=True)\n",
       "  )\n",
       "  (decoder): Decoder(\n",
       "    (embedding): Embedding(27, 12)\n",
-      "    (rnn): LSTM(12, 64, num_layers=4, batch_first=True)\n",
+      "    (rnn): LSTM(12, 64, batch_first=True)\n",
       "    (fc_out): Linear(in_features=64, out_features=27, bias=True)\n",
       "  )\n",
       ")\n",
-      "Number of parameters: 242019\n"
+      "Number of parameters: 42339\n"
      ]
     },
     {
@@ -144,10 +143,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.10.30<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">04_06__11_01</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">04_06__11_12</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://wandb.ai/nbg/PyTorch_Overfits\" target=\"_blank\">https://wandb.ai/nbg/PyTorch_Overfits</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/nbg/PyTorch_Overfits/runs/p0udwj9k\" target=\"_blank\">https://wandb.ai/nbg/PyTorch_Overfits/runs/p0udwj9k</a><br/>\n",
-       "                Run data is saved locally in <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210604_110146-p0udwj9k</code><br/><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/nbg/PyTorch_Overfits/runs/2101ljat\" target=\"_blank\">https://wandb.ai/nbg/PyTorch_Overfits/runs/2101ljat</a><br/>\n",
+       "                Run data is saved locally in <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210604_111217-2101ljat</code><br/><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -171,13 +170,13 @@
      "text": [
       "\n",
       "Before Training:\n",
-      "Test Loss: 3.2965, Test Accuracy: 0.0194, Test Distance: 62.70\n",
+      "Test Loss: 3.2952, Test Accuracy: 0.0332, Test Distance: 60.77\n",
       "\n",
       "Sample:\n",
-      "tensor([20, 20, 20, 20,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,\n",
-      "         8,  8,  8,  8, 13, 13, 13,  4,  4,  4,  4,  4,  4,  4, 13, 13, 13, 13,\n",
-      "        13, 13, 13,  4,  4,  4,  4,  4,  4,  4,  4, 13, 13, 13, 13, 13, 13, 13,\n",
-      "         4,  4,  4,  4,  4,  4,  4,  4, 13, 13], device='cuda:0')\n",
+      "tensor([25, 10, 10, 10, 20, 20,  8, 13, 13, 13, 13, 13, 13,  1, 20, 16, 18,  4,\n",
+      "        12, 16, 24, 16, 24, 16, 24, 16, 20, 16, 24, 16, 24, 16, 20, 16, 24, 16,\n",
+      "        24, 16, 20, 16, 24, 16, 24, 16, 20, 16, 24, 16, 24, 16, 20, 16, 24, 16,\n",
+      "        24, 16, 20, 16, 24, 16, 24, 16, 20, 16], device='cuda:0')\n",
       "\n"
      ]
     },
@@ -186,16 +185,16 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 1/500 [00:14<1:56:36, 14.02s/it]"
+      "  0%|          | 1/500 [00:07<1:00:58,  7.33s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, train_loss: 2.208905, train_acc: 0.410, val_loss: 2.034139, val_acc: 2.034\n",
+      "Epoch: 0, train_loss: 2.295801, train_acc: 0.399, val_loss: 2.032781, val_acc: 2.033\n",
       "Sample:\n",
-      "tensor([22,  1, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
+      "tensor([16, 22,  0,  2,  1, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26], device='cuda:0')\n"
@@ -205,133 +204,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 26/500 [05:16<1:34:49, 12.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 25, train_loss: 1.583118, train_acc: 0.472, val_loss: 1.577512, val_acc: 1.578\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 51/500 [10:11<1:27:36, 11.71s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 50, train_loss: 1.385800, train_acc: 0.533, val_loss: 1.405839, val_acc: 1.406\n",
-      "Sample:\n",
-      "tensor([ 8,  8,  8,  1,  8,  1,  1,  1,  1,  1, 26,  1, 20,  1, 26,  1, 26,  1,\n",
-      "         1,  1, 20,  1, 26,  1, 20,  1, 26,  1, 20,  1, 26,  1, 20, 26,  1,  1,\n",
-      "        16,  1, 26,  1, 20, 26,  1,  1, 16, 26,  1,  1, 16, 26,  1,  1, 16, 26,\n",
-      "         1,  1, 16, 26,  1,  1, 16, 26,  1,  1], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 15%|█▌        | 76/500 [15:08<1:17:12, 10.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 75, train_loss: 1.207834, train_acc: 0.593, val_loss: 1.259449, val_acc: 1.259\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 101/500 [20:00<1:19:03, 11.89s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 100, train_loss: 1.041146, train_acc: 0.650, val_loss: 1.136658, val_acc: 1.137\n",
-      "Sample:\n",
-      "tensor([25, 26,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15, 15, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 126/500 [24:59<1:13:28, 11.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 125, train_loss: 0.932677, train_acc: 0.688, val_loss: 1.100347, val_acc: 1.100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 151/500 [29:51<1:07:04, 11.53s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 150, train_loss: 0.856474, train_acc: 0.714, val_loss: 1.143606, val_acc: 1.144\n",
-      "Sample:\n",
-      "tensor([25,  1,  8, 26, 26, 26, 26,  1, 15, 26,  1,  9,  1, 10, 26,  1, 15,  1,\n",
-      "        16,  1,  9,  1, 26, 26,  1, 16,  1,  9,  1,  9,  1,  1, 15,  1,  1,  1,\n",
-      "         1,  1,  1,  9,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-      "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 176/500 [34:58<1:06:46, 12.37s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 175, train_loss: 0.784379, train_acc: 0.739, val_loss: 1.169757, val_acc: 1.170\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 189/500 [37:40<1:04:14, 12.39s/it]"
+      "  2%|▏         | 9/500 [01:02<56:48,  6.94s/it]  "
      ]
     }
    ],
    "source": [
     "train_params = {'batch_size': 32,\n",
-    "               'N_epochs': 250,\n",
+    "               'N_epochs': 500,\n",
     "               'teacher_forcing_ratio': 0.50,\n",
     "               'lr': 1e-3}\n",
     "\n",
     "encoder_params = {'input_size': K,\n",
     "                  'embedding_size': 12,\n",
     "                  'hidden_size': 64,\n",
-    "                  'n_layers': 4}\n",
+    "                  'n_layers': 1}\n",
     "\n",
     "decoder_params = {'output_size': K,\n",
     "                  'embedding_size': encoder_params['embedding_size'],\n",
@@ -359,118 +245,6 @@
     "main_wandb(model, criterion, optimizer, device, train_loader, validation_loader, test_loader, params)\n",
     "#main_simple(model, criterion, optimizer, device, train_loader, validation_loader, test_loader, params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_accuracies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_losses[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(train_accuracies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_accuracies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
