dec self attention

--- a/generator/PyTorch/Starter_PyTorch.ipynb
+++ b/generator/PyTorch/Starter_PyTorch.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "M = 8 \n",
+    "M = 8\n",
     "\n",
     "data_params = {'dataset_path': '/scratch/users/udemir15/ELEC491/bassline_transcription/data/datasets/[28, 51]',\n",
     "               'dataset_name': 'TechHouse_bassline_representations',\n",
@@ -92,6 +92,15 @@
     "\n",
     "print('Number of classes: {}\\nSequence Length: {}'.format(K, sequence_length))\n",
     "print('Number of data points: {}'.format(X.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
    ]
   },
   {
@@ -114,6 +123,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#encoder = encoders.LSTMEncoder(**encoder_params)\n",
+    "#decoder = decoders.SimpleLSTMDecoder(**decoder_params)\n",
+    "#model = models.Seq2SeqLSTM(encoder, decoder, device).to(device)\n",
+    "\n",
+    "encoder = encoders.GRUEncoder(**encoder_params)\n",
+    "decoder = decoders.SimpleGRUDecoder(**decoder_params)\n",
+    "model = models.Seq2SeqGRU(encoder, decoder, device).to(device)\n",
+    "\n",
+    "project_name = 'seq2seq_gru_simple'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "encoder = encoders.GRUEncoder(**encoder_params)\n",
+    "decoder = decoders.GRUDecoder(**decoder_params)\n",
+    "model = models.Seq2SeqGRU(encoder, decoder, device).to(device)\n",
+    "\n",
+    "project_name = 'seq2seq_gru'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -124,19 +159,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([27, 12])\n",
-      "Seq2Seq(\n",
-      "  (encoder): Encoder(\n",
+      "Seq2SeqGRUWithAttention(\n",
+      "  (encoder): BidirectionalGRUEncoder(\n",
       "    (embedding): Embedding(27, 12)\n",
-      "    (rnn): LSTM(12, 64, num_layers=4, batch_first=True)\n",
+      "    (rnn): GRU(12, 32, batch_first=True, bidirectional=True)\n",
+      "    (fc): Linear(in_features=64, out_features=32, bias=True)\n",
       "  )\n",
-      "  (decoder): Decoder(\n",
+      "  (decoder): GRUDecoderWithAttention(\n",
+      "    (attention): Attention(\n",
+      "      (attn): Linear(in_features=59, out_features=32, bias=True)\n",
+      "      (v): Linear(in_features=32, out_features=1, bias=False)\n",
+      "    )\n",
       "    (embedding): Embedding(27, 12)\n",
-      "    (rnn): LSTM(12, 64, num_layers=4, batch_first=True)\n",
-      "    (fc_out): Linear(in_features=64, out_features=27, bias=True)\n",
+      "    (rnn): GRU(39, 32, batch_first=True)\n",
+      "    (fc_out): Linear(in_features=71, out_features=27, bias=True)\n",
       "  )\n",
       ")\n",
-      "Number of parameters: 242019\n"
+      "Number of parameters: 22464\n",
+      "\n"
      ]
     },
     {
@@ -144,10 +184,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.10.30<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">04_06__11_01</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/nbg/PyTorch_Overfits\" target=\"_blank\">https://wandb.ai/nbg/PyTorch_Overfits</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/nbg/PyTorch_Overfits/runs/p0udwj9k\" target=\"_blank\">https://wandb.ai/nbg/PyTorch_Overfits/runs/p0udwj9k</a><br/>\n",
-       "                Run data is saved locally in <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210604_110146-p0udwj9k</code><br/><br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">06_06__02_07</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/nbg/seq2seq_gru_attention\" target=\"_blank\">https://wandb.ai/nbg/seq2seq_gru_attention</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/nbg/seq2seq_gru_attention/runs/21po2lrb\" target=\"_blank\">https://wandb.ai/nbg/seq2seq_gru_attention/runs/21po2lrb</a><br/>\n",
+       "                Run data is saved locally in <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210606_020706-21po2lrb</code><br/><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -162,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/500 [00:00<?, ?it/s]"
+      "  0%|          | 0/150 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -171,13 +211,13 @@
      "text": [
       "\n",
       "Before Training:\n",
-      "Test Loss: 3.2965, Test Accuracy: 0.0194, Test Distance: 62.70\n",
+      "Test Loss: 3.2384, Test Accuracy: 0.0368\n",
       "\n",
       "Sample:\n",
-      "tensor([20, 20, 20, 20,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,\n",
-      "         8,  8,  8,  8, 13, 13, 13,  4,  4,  4,  4,  4,  4,  4, 13, 13, 13, 13,\n",
-      "        13, 13, 13,  4,  4,  4,  4,  4,  4,  4,  4, 13, 13, 13, 13, 13, 13, 13,\n",
-      "         4,  4,  4,  4,  4,  4,  4,  4, 13, 13], device='cuda:0')\n",
+      "tensor([25,  1, 11,  7, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22,\n",
+      "        22, 22, 22, 22, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9,\n",
+      "        22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9, 22,  9,\n",
+      "        22,  9, 22,  9, 22,  9, 22,  9, 22,  9], device='cuda:0')\n",
       "\n"
      ]
     },
@@ -186,16 +226,16 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 1/500 [00:14<1:56:36, 14.02s/it]"
+      "  1%|          | 1/150 [00:16<40:43, 16.40s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, train_loss: 2.208905, train_acc: 0.410, val_loss: 2.034139, val_acc: 2.034\n",
+      "Epoch: 0, train_loss: 2.468158, val_loss: 2.133483\n",
       "Sample:\n",
-      "tensor([22,  1, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
+      "tensor([ 1, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
       "        26, 26, 26, 26, 26, 26, 26, 26, 26, 26], device='cuda:0')\n"
@@ -205,158 +245,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 26/500 [05:16<1:34:49, 12.00s/it]"
+      " 17%|█▋        | 26/150 [05:21<24:52, 12.04s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 25, train_loss: 1.583118, train_acc: 0.472, val_loss: 1.577512, val_acc: 1.578\n"
+      "Epoch: 25, train_loss: 1.615096, val_loss: 1.712160\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 51/500 [10:11<1:27:36, 11.71s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 50, train_loss: 1.385800, train_acc: 0.533, val_loss: 1.405839, val_acc: 1.406\n",
-      "Sample:\n",
-      "tensor([ 8,  8,  8,  1,  8,  1,  1,  1,  1,  1, 26,  1, 20,  1, 26,  1, 26,  1,\n",
-      "         1,  1, 20,  1, 26,  1, 20,  1, 26,  1, 20,  1, 26,  1, 20, 26,  1,  1,\n",
-      "        16,  1, 26,  1, 20, 26,  1,  1, 16, 26,  1,  1, 16, 26,  1,  1, 16, 26,\n",
-      "         1,  1, 16, 26,  1,  1, 16, 26,  1,  1], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 15%|█▌        | 76/500 [15:08<1:17:12, 10.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 75, train_loss: 1.207834, train_acc: 0.593, val_loss: 1.259449, val_acc: 1.259\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 101/500 [20:00<1:19:03, 11.89s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 100, train_loss: 1.041146, train_acc: 0.650, val_loss: 1.136658, val_acc: 1.137\n",
-      "Sample:\n",
-      "tensor([25, 26,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15, 15, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,  1, 15,\n",
-      "         1, 15,  1, 15,  1, 15,  1, 15,  1, 15], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 126/500 [24:59<1:13:28, 11.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 125, train_loss: 0.932677, train_acc: 0.688, val_loss: 1.100347, val_acc: 1.100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 151/500 [29:51<1:07:04, 11.53s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 150, train_loss: 0.856474, train_acc: 0.714, val_loss: 1.143606, val_acc: 1.144\n",
-      "Sample:\n",
-      "tensor([25,  1,  8, 26, 26, 26, 26,  1, 15, 26,  1,  9,  1, 10, 26,  1, 15,  1,\n",
-      "        16,  1,  9,  1, 26, 26,  1, 16,  1,  9,  1,  9,  1,  1, 15,  1,  1,  1,\n",
-      "         1,  1,  1,  9,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-      "         1,  1,  1,  1,  1,  1,  1,  1,  1,  1], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 176/500 [34:58<1:06:46, 12.37s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 175, train_loss: 0.784379, train_acc: 0.739, val_loss: 1.169757, val_acc: 1.170\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 189/500 [37:40<1:04:14, 12.39s/it]"
+      " 23%|██▎       | 35/150 [07:10<23:18, 12.16s/it]"
      ]
     }
    ],
    "source": [
     "train_params = {'batch_size': 32,\n",
-    "               'N_epochs': 250,\n",
-    "               'teacher_forcing_ratio': 0.50,\n",
-    "               'lr': 1e-3}\n",
+    "               'N_epochs': 150,\n",
+    "               'lr': 5e-4,\n",
+    "               'teacher_forcing_ratio': 0.50}\n",
+    "\n",
+    "decoder_hidden_size = 32\n",
     "\n",
     "encoder_params = {'input_size': K,\n",
     "                  'embedding_size': 12,\n",
-    "                  'hidden_size': 64,\n",
-    "                  'n_layers': 4}\n",
+    "                  'hidden_size': 32,\n",
+    "                  'output_size': decoder_hidden_size}\n",
     "\n",
     "decoder_params = {'output_size': K,\n",
     "                  'embedding_size': encoder_params['embedding_size'],\n",
-    "                  'hidden_size': encoder_params['hidden_size'],\n",
-    "                  'n_layers': encoder_params['n_layers']}\n",
+    "                  #'encoder_hidden_size': encoder_params['hidden_size'],\n",
+    "                  'hidden_size': decoder_hidden_size}\n",
     "\n",
-    "params = {'data_params': data_params,\n",
-    "          'encoder_params': encoder_params,\n",
-    "          'decoder_params':decoder_params, \n",
-    "          'train_params':train_params}\n",
+    "params = {'data': data_params,\n",
+    "          'encoder': encoder_params,\n",
+    "          'decoder':decoder_params, \n",
+    "          'training':train_params}\n",
     "\n",
-    "encoder = encoders.Encoder(**encoder_params)\n",
-    "decoder = decoders.Decoder(**decoder_params)\n",
+    "project_name = 'seq2seq_gru_attention'\n",
     "\n",
-    "model = models.Seq2Seq(encoder, decoder, device, train_params['teacher_forcing_ratio']).to(device)\n",
+    "encoder = encoders.BidirectionalGRUEncoder(**encoder_params).to(device)\n",
+    "decoder = decoders.GRUDecoderWithAttention(**decoder_params).to(device)\n",
+    "\n",
+    "model = models.Seq2SeqGRUWithAttention(encoder, decoder, device)\n",
     "\n",
     "print(model)\n",
-    "print('Number of parameters: {}'.format(sum([parameter.numel() for parameter in model.parameters()])))\n",
+    "print('Number of parameters: {}\\n'.format(sum([parameter.numel() for parameter in model.parameters()])))\n",
     "\n",
     "criterion = nn.CrossEntropyLoss(reduction='mean')\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=train_params['lr'])\n",
     "\n",
     "train_loader, validation_loader, test_loader = make_loaders(X, train_params)\n",
     "\n",
-    "main_wandb(model, criterion, optimizer, device, train_loader, validation_loader, test_loader, params)\n",
+    "main_wandb(model, criterion, optimizer, device, train_loader, validation_loader, test_loader, params, project_name)\n",
     "#main_simple(model, criterion, optimizer, device, train_loader, validation_loader, test_loader, params)"
    ]
   },
@@ -366,7 +311,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(train_accuracies)"
+    "def display_attention(sentence, translation, attention):\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(10,10))\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    \n",
+    "    attention = attention.squeeze(1).cpu().detach().numpy()\n",
+    "    a\n",
+    "    cax = ax.matshow(attention, cmap='bone')\n",
+    "   \n",
+    "    ax.tick_params(labelsize=15)\n",
+    "    \n",
+    "    #x_ticks = [''] + ['<sos>'] + [t.lower() for t in sentence] + ['<eos>']\n",
+    "    #y_ticks = [''] + translation\n",
+    "     \n",
+    "    #ax.set_xticklabels(x_ticks, rotation=45)\n",
+    "    #ax.set_yticklabels(y_ticks)\n",
+    "\n",
+    "    #ax.xaxis.set_major_locator(ticker.MultipleLocator(1))\n",
+    "    #ax.yaxis.set_major_locator(ticker.MultipleLocator(1))\n",
+    "\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -375,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_losses[0]"
+    "bassline = next(iter(train_loader))[0].to(device)"
    ]
   },
   {
@@ -384,93 +350,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(train_losses)"
+    "reconstruction, attention = reconstruct_bassline(model, bassline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=6\n",
+    "display_attention(bassline[i], reconstruction[i], attention[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out, att = model(trg, trg, 0, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(att)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "plt.plot(train_accuracies)"
+    "att[0].shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(train_losses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_accuracies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -493,6 +413,72 @@
     "\n",
     "test_loss, test_acc = test(model, test_loader, criterion, device)\n",
     "print('Test Loss After Training: {:.6f}'.format(test_loss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_params = {'input_size': K,\n",
+    "                  'embedding_size': 16,\n",
+    "                  'hidden_size': 256,\n",
+    "                  'n_layers': 1}\n",
+    "\n",
+    "train_params = {'batch_size': 32,\n",
+    "               'N_epochs': 150,\n",
+    "               'lr': 5e-4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size  =K\n",
+    "embedding_size = 12\n",
+    "enc_hidden_size = 128\n",
+    "dec_hidden_size = 100\n",
+    "\n",
+    "model = encoders.BidirectionalGRUEncoder(input_size, dec_hidden_size, embedding_size, enc_hidden_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader, validation_loader, test_loader = make_loaders(X, train_params)\n",
+    "\n",
+    "batch = next(iter(train_loader))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs, hidden = model(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "att = decoders.Attention(enc_hidden_size, dec_hidden_size)"
    ]
   }
  ],
