--- a/generator/PyTorch/Starter_PyTorch.ipynb
+++ b/generator/PyTorch/Starter_PyTorch.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -23,6 +33,7 @@
     "import decoders\n",
     "from training import train, test, checkpoint, main_wandb, main_simple\n",
     "from dataloaders import load_data, make_loaders, append_SOS\n",
+    "import utils\n",
     "\n",
     "import sys\n",
     "sys.path.insert(0, '/scratch/users/udemir15/ELEC491/bassline_transcription')\n",
@@ -43,22 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SOS token added.\n",
+      "Number of classes: 27\n",
+      "Sequence Length: 65\n",
+      "Number of data points: 4020\n"
+     ]
+    }
+   ],
    "source": [
     "M = 8\n",
     "\n",
     "data_params = {'dataset_path': '/scratch/users/udemir15/ELEC491/bassline_transcription/data/datasets/[28, 51]',\n",
     "               'dataset_name': 'TechHouse_bassline_representations_4020',\n",
-    "               #'dataset_name': 'TechHouse_bassline_representations',\n",
     "               'scale_type': 'min',\n",
     "               'M': M}\n",
     "\n",
-    "X, titles = load_data(data_params)\n",
-    "X = append_SOS(X)\n",
+    "X, titles = load_data(data_params, True)\n",
     "\n",
     "K = int(X.max()+1) # Number of classes, assumes consecutive [0,max] inclusive\n",
     "sequence_length = X.shape[1]\n",
@@ -194,10 +214,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.load('model_checkpoints/03_06__22_55.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_dict = utils.load_state_dict('03_06__22_55')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = TheModelClass(*args, **kwargs)\n",
+    "model.load_state_dict(torch.load(PATH))\n",
+    "model.eval()"
+   ]
   },
   {
    "cell_type": "markdown",
