--- a/generator/PyTorch/Untitled.ipynb
+++ b/generator/PyTorch/Untitled.ipynb
@@ -6,27 +6,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import torch\n",
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = nn.GRU(5, 10, num_layers=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3.258096538021482"
+       "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log(1/26)"
+    "model.num_layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.hidden_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {'x': 4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = dct['x']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': 4}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dct"
    ]
   },
   {
@@ -34,38 +131,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class VanillaAutoEncoder(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, embedding, encoder, decoder, teacher_forcing_ratio=0.0):\n",
-    "        \n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.embedding = embedding\n",
-    "        self.encoder = encoder\n",
-    "        self.decoder = decoder\n",
-    "                   \n",
-    "    def forward(self, x):\n",
-    "        \n",
-    "        x_embed = self.embedding(x)\n",
-    "                \n",
-    "        y, (h, c) = self.encoder(x_embed)\n",
-    "        \n",
-    "        if teacher_forcing_ratio:\n",
-    "            output_sequence = self.decoder(y, (h, c), x_embed)\n",
-    "        else: \n",
-    "            output_sequence = self.decoder(y, (h, c)) \n",
-    "            \n",
-    "        return output_sequence.permute(0,2,1) # for loss calculation\n",
-    "    \n",
-    "    \n",
-    "    # DECODER INPUT????????\n",
-    "    def sample(self ,x):        \n",
-    "        x = torch.zeros((self.decoder.batch_size, self.decoder.input_size)).cuda()        \n",
-    "        (h, c) = self.decoder.init_hidden_cell_states(random=True)    \n",
-    "        sample = self.decoder(x, (h, c))        \n",
-    "        return sample.argmax(dim=-1)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
