--- a/generator/PyTorch/MADE.ipynb
+++ b/generator/PyTorch/MADE.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -90,18 +90,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The history saving thread hit an unexpected error (OperationalError('disk I/O error')).History will not be written to the database.\n",
-      "Number of classes: 26\n",
+      "Number of classes: 2\n",
       "Sequence Length: 64\n",
-      "Number of data points: 4020\n"
+      "Number of data points: 4521\n"
      ]
     }
    ],
    "source": [
     "M = 8\n",
     "\n",
-    "data_params = {'dataset_path': '/scratch/users/udemir15/ELEC491/bassline_transcription/data/datasets/[28, 51]',\n",
-    "               'dataset_name': 'TechHouse_bassline_representations_4020',\n",
+    "data_params = {'dataset_path': '/scratch/users/udemir15/ELEC491/bassline_transcription/data/datasets/groove', #/single_octave/no_sus', #[28, 51]\n",
+    "               'dataset_name': 'TechHouse_bassline_representations_4521', #4020\n",
     "               'scale_type': 'min',\n",
     "               'M': M}\n",
     "\n",
@@ -117,32 +116,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.10.30<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">10_06__16_00</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/nbg/MADE\" target=\"_blank\">https://wandb.ai/nbg/MADE</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/nbg/MADE/runs/15k5a8tp\" target=\"_blank\">https://wandb.ai/nbg/MADE/runs/15k5a8tp</a><br/>\n",
+       "                Run data is saved locally in <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210610_160052-15k5a8tp</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 1/150 [00:00<01:37,  1.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1, train_loss: 0.666494, validation_loss: 0.651881\n",
+      "[1 1 0 1 1 1 0 1 1 0 1 1 0 1 0 1 1 0 1 1 0 0 1 1 1 0 1 1 0 1 0 1 0 1 1 1 1\n",
+      " 1 0 1 1 1 0 1 1 1 1 1 0 1 1 1 1 0 0 1 0 1 0 1 0 1 0 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 17%|█▋        | 26/150 [00:07<00:33,  3.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 26, train_loss: 0.472170, validation_loss: 0.495786\n",
+      "[0 0 1 1 1 0 0 1 1 1 1 1 1 0 0 1 0 0 0 1 1 0 0 1 0 0 0 0 1 0 0 1 1 0 0 1 1\n",
+      " 0 0 1 1 0 0 0 1 0 0 1 1 1 0 1 1 0 0 1 1 0 0 0 0 1 0 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 51/150 [00:13<00:24,  4.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 51, train_loss: 0.437023, validation_loss: 0.502323\n",
+      "[1 1 0 0 1 1 0 1 0 1 1 0 1 1 0 1 0 1 1 0 1 1 0 1 1 1 1 0 1 1 0 1 1 1 1 0 1\n",
+      " 1 0 1 0 1 1 0 1 1 1 1 1 1 1 0 1 1 0 1 0 1 1 0 1 1 0 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 51%|█████     | 76/150 [00:20<00:19,  3.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 76, train_loss: 0.402429, validation_loss: 0.537875\n",
+      "[0 0 1 1 1 1 1 0 1 0 1 1 1 1 0 1 1 0 1 1 1 1 0 1 1 1 0 1 1 1 0 1 1 0 1 1 1\n",
+      " 1 0 0 1 0 1 1 1 1 0 1 1 0 0 1 1 1 0 1 1 0 1 1 1 1 0 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 101/150 [00:27<00:15,  3.24it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 101, train_loss: 0.366426, validation_loss: 0.609473\n",
+      "[0 0 0 1 0 0 1 0 0 0 1 0 0 1 1 1 0 1 1 1 0 0 1 0 0 1 1 0 0 0 1 1 0 1 1 1 0\n",
+      " 1 0 0 0 1 1 0 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 0 0 1 1 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████▍ | 126/150 [00:31<00:05,  4.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 126, train_loss: 0.336358, validation_loss: 0.729926\n",
+      "[0 1 0 0 1 0 1 0 1 0 1 1 1 0 1 1 0 0 1 0 1 0 1 1 1 0 1 1 1 0 1 1 0 0 1 0 0\n",
+      " 0 1 0 1 0 1 1 0 0 1 1 0 1 1 0 0 0 1 0 1 0 1 1 0 1 1 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 150/150 [00:36<00:00,  4.14it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br/>Waiting for W&B process to finish, PID 168941<br/>Program ended successfully."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find user logs for this run at: <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210610_160052-15k5a8tp/logs/debug.log</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find internal logs for this run at: <code>/scratch/users/udemir15/ELEC491/Bassline-Generator/generator/PyTorch/wandb/run-20210610_160052-15k5a8tp/logs/debug-internal.log</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h3>Run summary:</h3><br/><style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
+       "    </style><table class=\"wandb\">\n",
+       "<tr><td>train_loss</td><td>0.3131</td></tr><tr><td>validation_loss</td><td>0.85885</td></tr><tr><td>_runtime</td><td>48</td></tr><tr><td>_timestamp</td><td>1623330100</td></tr><tr><td>_step</td><td>155</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<h3>Run history:</h3><br/><style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
+       "    </style><table class=\"wandb\">\n",
+       "<tr><td>train_loss</td><td>█▇▆▅▅▅▅▄▄▄▄▄▄▄▄▃▃▃▃▃▃▃▃▃▂▂▂▂▂▂▂▂▂▂▁▁▁▁▁▁</td></tr><tr><td>validation_loss</td><td>▃▃▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▃▃▃▃▄▄▄▅▅▆▆▆▆▇██</td></tr><tr><td>_runtime</td><td>▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇▇▇████</td></tr><tr><td>_timestamp</td><td>▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇▇▇████</td></tr><tr><td>_step</td><td>▁▁▁▁▂▂▂▂▂▃▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇▇███</td></tr></table><br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Synced 6 W&B file(s), 1 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                    <br/>Synced <strong style=\"color:#cdcd00\">10_06__16_00</strong>: <a href=\"https://wandb.ai/nbg/MADE/runs/15k5a8tp\" target=\"_blank\">https://wandb.ai/nbg/MADE/runs/15k5a8tp</a><br/>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_params = {'batch_size': 64,\n",
     "               'N_epochs': 150,\n",
     "               'lr': 1e-3}\n",
     "\n",
-    "params = {'training': train_params, 'hidden_size': [128]*2}\n",
+    "params = {'training': train_params, 'hidden_size': [512]*4, 'data': data_params}\n",
     "\n",
     "train_loader, validation_loader = make_loaders(X, train_params['batch_size'])\n",
     "\n",
     "model = MADE((X.shape[1],), K, params['hidden_size'], one_hot_input=True).cuda()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=train_params['lr'])\n",
     "\n",
-    "best_model = main(model, optimizer, device, train_loader, validation_loader, train_params['N_epochs'], True)\n",
-    "#best_model = main_wandb(model, optimizer, device, train_loader, validation_loader, train_params['N_epochs'], True)"
+    "#best_model = main(model, optimizer, device, train_loader, validation_loader, train_params['N_epochs'], True)\n",
+    "best_model = main_wandb(model, optimizer, device, train_loader, validation_loader, params, project='MADE',return_best=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  3  0  8  5  0  0  0  0  0  0 12  2  3  5 12  0 11  0  0  5  6  3  0\n",
+      "   0  0  0  0  5  0  0  5 10  0  0  5  5  0  5  0  6  0  0  5  5  0  0  5\n",
+      "   5  0  0  5  7  0  0  7  0  0  0  5  6  0  0  5]\n",
+      " [ 0  0  0  9  0  0  0  4  0  0  0  1  1  0  9  4  0  0  7  0  0  2  0  4\n",
+      "   0  0 11  0  0  0  8  0  0  0 11  1  0  0  5  0  7  0  0  1  1  1  1  1\n",
+      "   0 11  0  1  0  0  0  0  8  0  0  1  1  0  0  8]\n",
+      " [ 0  0  0  1  0  2  6  0  6  0  0  4  8  1  0  1 11  0  0  0  0  9  6  2\n",
+      "   3  0 11  1  0 11  0  1  1  2  0  0  5  1  4  2  5  0 12  0  7  1  1  9\n",
+      "   1  0  0 12 11  0  0  1  4  4  1  0  1  0  1  1]\n",
+      " [10  0  4  9  4  4  3 12  0  0  4  8 11  0  3  1  0  0 10  3  9  1  0  4\n",
+      "   0  4  6 11  6  0  3  0  0 10  0  4  0  3  3  5  1  4  3  9  7  4  1  0\n",
+      "   4  0  2  3  3  3  0  0  3  3  0  0  5  0  6  4]\n",
+      " [ 8  0  0  0  0  0  0  0  4  0 10  6  3  3  0  0  0  4  9  6 11  4  6  0\n",
+      "   0  0  0 11  6  6  0 11  0  0  0  0  0  0  4  0  9  5  0  4  7  0  4  4\n",
+      "  11  4  4  0  0  6  4  0  4  2  0  4  4  6  0 11]\n",
+      " [ 0  0  0 11  0  0  1  0  0  8  9  8  0  3 11  1  0  1  0  8  0  4  0  1\n",
+      "   0  8  0  1  0  6  0  9  0  0  0 12  0  9  0  0  0  8  0  8  0  9  0  0\n",
+      "  10  0  0  0  0  8  0  0  0  8  1  0  0  0 11  9]\n",
+      " [ 1  1  8  1 12  1  4 11  2  1  0  0  8  9  5 12  1  1  1  2  1  3  0  0\n",
+      "   1  1  1  1  2  8  0  0 12  1  2  1  1  1  5  2  5  1 11  1  0 12  3  0\n",
+      "   1  3  0  1  2  1  1  3  3  1  1  1  1  2  6  6]\n",
+      " [ 4  0  1  9  6  8  1  1  1  1  3  4  3  0  0  2  0  0  0  2  0 11  1  1\n",
+      "   9  0  3  6  3  0  1 12  2  0  3  5  5  1  1  1  1  3  3  3  0  2  0  1\n",
+      "  12  0  5  5  3  0  7  1  9  4  0  2  5  5  6  3]\n",
+      " [ 0  0  0  0  0 11  0  4  8  0  2  9  1  0  0  2  2  1  0  4  4 10  3  4\n",
+      "   0  0  0  0  0 10  0  3  0  8  0  0  1  2 12  4  0  0  0  2  8  0  0  3\n",
+      "   0  0 10  8  0  4  0  4  3  4  0  0  0  0  0  4]\n",
+      " [11  1  1  1  0  0  0  0  0  0  0  0  0  0  1 11  0  1  1  1  0  0  0 12\n",
+      "   0  1  0  0  0  0  0  4  0  1  0  1  0  0  0  9  0  1 12  1  0  5  0  4\n",
+      "   0  1  0  1  0  0 11 11  1  1  0  0  0  0  2  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "samples = best_model.sample(5)\n",
+    "samples = best_model.sample(10)\n",
     "print(samples)"
    ]
   },
@@ -158,12 +426,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "bassline = samples[0]\n",
     "print_beat_matrix(bassline, M=8)\n",
@@ -172,56 +438,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 1 0 1 1 1 1 1 1 1 0 1 1 1 1 1 1 0 1 1\n",
+      "  1 1 1 1 1 1 1 1 1 1 1 0 1 1 0 1 1 1 1 1 1 1 1 1 0 1 1 1]\n",
+      " [0 1 0 0 0 1 0 1 1 1 0 1 1 0 1 1 1 0 0 1 0 1 1 1 1 0 0 1 0 0 1 1 1 0 0 0\n",
+      "  0 0 1 1 1 0 0 0 1 0 0 0 1 0 0 1 0 1 1 0 1 0 0 0 0 1 1 1]\n",
+      " [0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 1 1 1 0 1 0 0 0 1 0 1 1 1 0 1 1 1\n",
+      "  1 0 1 1 0 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0 0 0 1 1 1 1 1]\n",
+      " [1 0 0 1 0 1 0 1 0 1 1 1 0 0 1 0 0 1 1 1 0 1 1 1 0 0 1 0 0 0 1 1 1 1 1 0\n",
+      "  0 0 1 1 0 0 1 1 1 0 1 1 1 1 1 0 0 1 1 1 0 0 1 0 1 0 0 1]\n",
+      " [0 0 1 1 0 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 0 0 1 1\n",
+      "  1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1 1 0 1 1]\n",
+      " [0 0 1 0 1 0 0 1 1 0 1 0 0 1 1 1 1 0 1 0 1 1 0 1 1 0 1 0 0 1 1 1 0 1 1 0\n",
+      "  1 1 0 1 1 0 1 0 0 1 1 1 0 1 1 0 1 1 0 1 1 0 1 0 0 1 1 1]\n",
+      " [0 1 0 0 1 0 1 1 0 0 0 0 0 1 0 1 1 1 0 0 1 1 1 0 0 1 1 0 0 0 0 1 0 1 0 1\n",
+      "  1 1 1 1 1 1 1 1 0 0 1 1 1 1 0 1 1 1 1 1 1 0 1 1 0 1 0 1]\n",
+      " [0 1 1 0 0 1 1 0 0 1 1 0 0 1 0 1 0 1 0 0 0 1 1 1 0 1 1 0 1 1 1 1 0 1 0 0\n",
+      "  0 1 1 1 0 0 1 0 1 1 0 1 0 1 0 0 0 1 1 0 0 1 1 0 1 1 1 1]\n",
+      " [0 1 0 0 1 1 1 0 0 0 0 1 0 1 1 1 0 1 0 0 1 1 0 0 0 0 1 1 0 1 0 0 0 0 1 0\n",
+      "  1 1 1 0 0 0 1 1 0 1 1 0 0 1 1 0 0 1 1 0 0 0 0 1 0 1 1 1]\n",
+      " [0 1 1 1 0 0 0 1 0 1 0 1 1 0 0 1 0 0 1 1 0 1 0 1 0 1 0 1 1 1 0 1 0 1 1 1\n",
+      "  0 0 0 1 0 1 0 1 1 0 0 1 0 0 1 1 0 0 0 1 0 1 1 1 1 1 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "samples = best_model.sample(10)\n",
+    "print(samples)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0,0 24,0,0 24 24,0 11,0 24,0 24 24 24 24 24,0 24 18 14,0,0,0, 0,0 24,0 18 24 24 17 24,0,0,0 10,0,0 24 24 24,7,6 24,0 18 21,22,0,0,0 24 24,0,0 24,0,0,0 20 16,0,0'"
+       "array([[0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1],\n",
+       "       [0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1,\n",
+       "        1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0,\n",
+       "        1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1,\n",
+       "        0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1,\n",
+       "        1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1],\n",
+       "       [1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1,\n",
+       "        1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1,\n",
+       "        1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1],\n",
+       "       [0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0,\n",
+       "        1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
+       "        1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1],\n",
+       "       [0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1,\n",
+       "        0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0,\n",
+       "        0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1],\n",
+       "       [0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1,\n",
+       "        1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1,\n",
+       "        1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0,\n",
+       "        1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1],\n",
+       "       [0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1,\n",
+       "        0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1,\n",
+       "        0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1],\n",
+       "       [0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1,\n",
+       "        0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1,\n",
+       "        1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    ".replace('  ',',').replace('\\n', '')"
+    "samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "0,0 24,0,0 24 24,0 11,0 24,0 24 24 24 24 24,0 24 18 14,0,0,0, 0,0 24,0 18 24 24 17 24,0,0,0 10,0,0 24 24 24,7,6 24,0 18 21,22,0,0,0 24 24,0,0 24,0,0,0 20 16,0,0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = np.array([24, 0, 0, 0, 24, 24, 16, 12, 22, 0, 19, 14, 24, 24, 24, 0, 0, 0, 5, 24, 0, 0, 0, 0, 0, 24, 24, 0, 16, 0, 24, 0, 24, 0, 24, 23, 19, 17, 0, 0, 20, 24, 13, 2, 23, 0, 24, 0, 18, 0, 0, 0, 24, 24, 24, 10, 0, 0, 0, 7, 24, 24, 0, 0, ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NN_output_to_MIDI_file(s, 'midi/haldun3', '.', M)"
+    "min_note = 36\n",
+    "sustain_code = None\n",
+    "for i, sample in enumerate(samples):\n",
+    "    NN_output_to_MIDI_file(sample, '{}'.format(i), 'midi/made/groove', M,\n",
+    "                           min_note=min_note,\n",
+    "                           sustain_code=sustain_code)"
    ]
   },
   {
